# db_easy

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/db_easy/: __init__.py  __main__.py  cli.py  config.py  connector_proxy.py  constants.py  dialects.py  executor.py  parser.py  templating.py
src/db_easy/adapters/: __init__.py  base.py  mariadb.py  mssql.py  postgres.py
src/sqlstride/: cli.py
src/sqlstride/database/adapters/: mariadb.py  mssql.py  postgres.py
