[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-easy"
dynamic = ["version"]
description = 'Zero-boilerplate schema migrations —straight from your own SQL files.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["source-control", "database", "db", "easy", "migrations", "db-migrations", "database-migrations"]
authors = [
    { name = "Jesse", email = "magicjedi90@aim.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["etl-utilities", "pymysql", "click", "pyodbc"]

[project.urls]
Documentation = "https://github.com/magicjedi90/db_easy#readme"
Issues = "https://github.com/magicjedi90/db_easy/issues"
Source = "https://github.com/magicjedi90/db_easy"

[project.scripts]
db-easy = "db_easy.cli:run_cli"

[tool.hatch.version]
path = "src/db_easy/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/db_easy"]
[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/db_easy tests}"

[tool.coverage.run]
source_pkgs = ["db_easy", "tests"]
branch = true
parallel = true
omit = [
    "src/db_easy/__about__.py",
]

[tool.coverage.paths]
db_easy = ["src/db_easy", "*/db_easy/src/db_easy"]
tests = ["tests", "*/db_easy/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]